[gd_scene load_steps=11 format=3 uid="uid://b5sj3k4pn1mvu"]

[ext_resource type="PackedScene" uid="uid://nc5enh8swv78" path="res://Objects/Backgrounds/objBackgroundColor.tscn" id="1_efrpp"]
[ext_resource type="PackedScene" uid="uid://bm40t36a6m8sc" path="res://Objects/Tiles/til32x32.tscn" id="2_clpv4"]
[ext_resource type="Script" path="res://Rooms/TrapNode.gd" id="3_lluth"]
[ext_resource type="Texture2D" uid="uid://cbh48kxqc56e1" path="res://Graphics/Neos/png-clipart-yuruyuri-anime-4chan-youtube-anime-television-mammal-thumbnail.png" id="4_8craa"]
[ext_resource type="Script" path="res://addons/2d_shapes/shapes/Ellipse.gd" id="5_1wr7g"]
[ext_resource type="AudioStream" uid="uid://b4e0e0q18o0gl" path="res://Audio/Music/Neos/Baka Mitai - Yakuza OST.ogg" id="5_aps8f"]
[ext_resource type="AudioStream" uid="uid://c6hi0hsu3bg1q" path="res://Audio/Music/Neos/LOVE TOGETHER.ogg" id="6_ftefg"]

[sub_resource type="Animation" id="Animation_sy7i4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrapNode/BakaMitai:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrapNode/Node2D/Ellipse:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TrapNode/Node2D/Ellipse:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 24)]
}

[sub_resource type="Animation" id="Animation_agv0u"]
resource_name = "Trap_Setup"
length = 30.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrapNode/BakaMitai")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 189.269,
"start_offset": 65.5029,
"stream": ExtResource("5_aps8f")
}],
"times": PackedFloat32Array(0.5)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrapNode/LoveTogether")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 17.6896,
"start_offset": 0.0,
"stream": ExtResource("6_ftefg")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TrapNode/BakaMitai:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 28.2, 29.8),
"transitions": PackedFloat32Array(1, -2, -2),
"update": 0,
"values": [0.0, 0.0, -26.12]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TrapNode/Node2D/Ellipse:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("TrapNode/Node2D/Ellipse:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.8, 1, 1.2, 1.4, 2, 2.2, 2.4, 2.5, 2.6, 2.9, 3.1, 3.4, 3.5, 3.7, 3.9, 4.1, 4.3, 4.4, 4.6, 4.8, 5, 5.3, 5.4, 5.6, 5.8, 6, 6.2, 6.3, 6.5, 6.7, 6.9, 7.2, 7.3, 7.5, 7.7, 7.9, 8.3, 8.4, 8.6, 8.8, 9, 9.3, 9.4, 9.6, 9.8, 10, 10.2, 10.3, 10.5, 10.7, 10.9, 11.2, 11.3, 11.5, 11.7, 11.9, 12.1, 12.2, 12.4, 12.6, 12.8, 13.1, 13.2, 13.4, 13.6, 13.8, 14, 14.1, 14.3, 14.5, 14.7, 15, 15.1, 15.3, 15.5, 15.7, 16.1, 16.2, 16.4, 16.6, 16.8, 17.1, 17.2, 17.4, 17.6, 17.8, 18, 18.1, 18.3, 18.5, 18.7, 19, 19.1, 19.3, 19.5, 19.7, 19.9, 20, 20.2, 20.4, 20.6, 20.9, 21, 21.2, 21.4, 21.6, 21.8, 21.9, 22.1, 22.3, 22.5, 22.8, 22.9, 23.1, 23.3, 23.5, 23.9, 24, 24.2, 24.4, 24.6, 24.9, 25, 25.2, 25.4, 25.6, 25.8, 25.9, 26.1, 26.3, 26.5, 26.8, 26.9, 27.1, 27.3, 27.5, 27.7, 27.8, 28, 28.2, 28.4, 28.7, 28.8, 29, 29.2, 29.4, 29.6, 29.7, 29.9, 30.1, 30.3, 30.6, 30.7, 30.9, 31.1, 31.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(10, 10), Vector2(3, 3), Vector2(3, 3), Vector2(3, 3), Vector2(3, 3), Vector2(8, 18), Vector2(20, 20), Vector2(26, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12), Vector2(3, 3), Vector2(24, 24), Vector2(8, 18), Vector2(12, 12), Vector2(20, 12)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 1.8, 2.6, 5.5, 7.2, 8.4, 9.2, 12.7, 13.6, 14.6, 15.6, 16.9, 17.7, 19.4, 20.7, 22.1, 23.8, 25.4, 26.7, 27.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}, {
"args": [],
"method": &"mouth_size"
}, {
"args": [],
"method": &"close_mouth"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r0k2k"]
_data = {
"RESET": SubResource("Animation_sy7i4"),
"Trap_Setup": SubResource("Animation_agv0u")
}

[node name="PenaltyTrapRoom" type="Node2D"]
script = ExtResource("3_lluth")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="TrapNode" type="Node2D" parent="."]

[node name="Environment" type="Node2D" parent="TrapNode"]

[node name="objBackgroundColor" parent="TrapNode/Environment" instance=ExtResource("1_efrpp")]
z_index = 0
offset_right = 800.0
offset_bottom = 608.0
color = Color(0.85098, 0.772549, 0.847059, 1)

[node name="til32x32" parent="TrapNode/Environment" instance=ExtResource("2_clpv4")]
rendering_quadrant_size = 32
layer_0/tile_data = PackedInt32Array(0, 65536, 3, 1179672, 65536, 3, 24, 65536, 3, 1179648, 65536, 3, 65560, 65536, 2, 131096, 65536, 2, 196632, 65536, 2, 262168, 65536, 2, 327704, 65536, 2, 393240, 65536, 2, 458776, 65536, 2, 524312, 65536, 2, 589848, 65536, 2, 655384, 65536, 2, 720920, 65536, 2, 786456, 65536, 2, 851992, 65536, 2, 917528, 65536, 2, 983064, 65536, 2, 1048600, 65536, 2, 1114136, 65536, 2, 65536, 65536, 2, 131072, 65536, 2, 196608, 65536, 2, 262144, 65536, 2, 327680, 65536, 2, 393216, 65536, 2, 458752, 65536, 2, 524288, 65536, 2, 589824, 65536, 2, 655360, 65536, 2, 720896, 65536, 2, 786432, 65536, 2, 851968, 65536, 2, 917504, 65536, 2, 983040, 65536, 2, 1048576, 65536, 2, 1114112, 65536, 2, 1179649, 0, 3, 1179650, 0, 3, 1179651, 0, 3, 1179652, 0, 3, 1179653, 0, 3, 1179654, 0, 3, 1179655, 0, 3, 1179656, 0, 3, 1179657, 0, 3, 1179658, 0, 3, 1179659, 0, 3, 1179660, 0, 3, 1179661, 0, 3, 1179662, 0, 3, 1179663, 0, 3, 1179664, 0, 3, 1179665, 0, 3, 1179666, 0, 3, 1179667, 0, 3, 1179668, 0, 3, 1179669, 0, 3, 1179670, 0, 3, 1179671, 0, 3)

[node name="Kyoko" type="Sprite2D" parent="TrapNode"]
position = Vector2(400, 192)
texture = ExtResource("4_8craa")

[node name="BakaMitai" type="AudioStreamPlayer" parent="TrapNode"]
bus = &"Music"

[node name="LoveTogether" type="AudioStreamPlayer" parent="TrapNode"]
bus = &"Music"

[node name="Node2D" type="Node2D" parent="TrapNode"]

[node name="Ellipse" type="Node2D" parent="TrapNode/Node2D"]
visible = false
position = Vector2(393, 230)
rotation = -0.404916
script = ExtResource("5_1wr7g")
size = Vector2(24, 24)
fill_color = Color(0, 0, 0, 1)
outline_color = Color(1, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r0k2k")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MouthInterval" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MouthInterval" to="." method="_on_mouth_interval_timeout"]
